<resources>
    <string name="app_name">CCO</string>

    <!-- Actividades -->
    <string name="title_activity_eventoscurso">Eventos en Curso</string>
    <string name="title_activity_update">Editar Meta</string>
    <string name="title_activity_detail">Detalle</string>
    <string name="title_activity_insert">Insertar Nuevo Evento</string>

    <!--Action Buttons-->
    <string name="action_delete">Borrar</string>
    <string name="action_discard">Descartar</string>
    <string name="action_edit">Editar</string>
    <string name="action_done">Guardar</string>
    <string name="action_logout">Desconectarse</string>

    <!-- Diálogos del Login -->
    <string name="enter_user">Por favor ingrese el usuario</string>
    <string name="enter_pass">Por favor ingrese la contraseña</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>

    <!-- Diálogos -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_discard_msg">¿Descartar Cambios?</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_delete_msg">Se eliminará</string>

    <!-- Diálogos de la confirmación -->
    <string name="detalle_titulo">Detalle del evento</string>
    <string name="radicado">Radicado: </string>
    <string name="cod_evento">Código: </string>
    <string name="via">Vía: </string>
    <string name="sector">Sector: </string>
    <string name="btxtDetalle">Ver Detalle</string>
    <string name="btxtAceptar">Acepto</string>
    <string name="btxtLlegar">Llegué al sitio</string>
    <string name="btxtSuperar">Evento superado</string>

    <!-- Codigos de eventos -->
    <string-array name="entradas_Cod_Eventos">
        <item></item>
        <item>AT</item>
        <item>PA</item>
        <item>TL</item>
        <item>SG</item>
        <item>PEV</item>
    </string-array>

    <!--Unidades a las que se le notificará en la respuesta-->
    <string-array name="unidades_not">
        <item>AMBULANCIA</item>
        <item>DITRA</item>
        <item>GRUA</item>
        <item>CUADRILLA_MTTO_VP_Y_SE</item>
        <item>CUADRILLA_MTTO_DC</item>
        <item>TTO_MEDELIN</item>
        <item>TTO_ENVIGADO</item>
        <item>TTO_RIONEGRO</item>
        <item>CONCESIÓN</item>
    </string-array>

    <!-- Vias-->
    <string-array name="entradas_Vias">
        <item>VARIANTE LAS PALMAS</item>
        <item>DOBLE CALZADA</item>
        <item>SANTA ELENA</item>
        <item>OTRA</item>
    </string-array>

        <!-- Array Unidades de operación -->
        <string-array name="unidades_operacion">
            <item>DITRA</item>
            <item>AMBULANCIA</item>
            <item>GRÚA</item>
            <item>MTTO_VP_Y_SE</item>
            <item>MTTO_DC</item>
            <item>CONCESIÓN</item>
            <item>MOVILIDAD_MEDELLIN</item>
            <item>MOVILIDAD_ENVIGADO</item>
            <item>MOVILIDAD_RIONEGRO</item>
        </string-array>

    <!-- Unidades de operación -->
    <string name="DITRA">DITRA</string>
    <string name="AMBULANCIA">AMBULANCIA</string>
    <string name="GRUA">GRUA</string>
    <string name="CUADRILLA_MTTO_VP_Y_SE">CUADRILLA_MTTO_VP_Y_SE</string>
    <string name="CUADRILLA_MTTO_DC">CUADRILLA_MTTO_DC</string>
    <string name="TTO_MEDELLIN">TTO_MEDELIN</string>
    <string name="TTO_ENVIGADO">TTO_ENVIGADO</string>
    <string name="TTO_RIONEGRO">TTO_RIONEGRO</string>
    <string name="CONCESION">CONCESIÓN</string>

    <!--Accion-->
    <string name="accion_aceptar">ACEPTO</string>
    <string name="accion_llegar">LLEGUE_SITIO</string>
    <string name="accion_disponible">DISPONIBLE</string>
    <string name="observacion_parte1">Informa\u0020</string>
    <string name="observacion_parte2">que\u0020</string>
    <string name="observacion_parte3">y se dirige al sitio del evento desde</string>
    <string name="observacion_disponible">que se retira del sitio quedando disponible</string>

    <string name="notificar_a">Notificar a:</string>
    <string name="send">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="seleccionar_ubicacion">Ingrese ubicación</string>
    <string name="ubicación">Ubicación</string>

    <!--Desaeventos-->
    <string name="fd_desaevento">Id Desarrollo Evento:</string>
    <string name="fd_desaevento1">Id Desarrollo Evento</string>
    <string name="fd_radicado">Radicado:</string>
    <string name="fd_radicado1">Radicado</string>
    <string name="fd_evento">Evento:</string>
    <string name="fd_evento1">Evento</string>
    <string name="fd_subEvento">Sub Evento:</string>
    <string name="fd_subEvento1">Sub Evento</string>
    <string name="fd_observaciones">Observaciones:</string>
    <string name="fd_observaciones1">Observaciones</string>
    <string name="fd_estado">Estado:</string>
    <string name="fd_estado1">Estado</string>
    <string name="fd_fechaIngreso">Fecha Ingreso Sistema:</string>
    <string name="fd_fechaIngreso1">Fecha Ingreso Sistema</string>
    <string name="fd_fecha">Fecha y Hora:</string>
    <string name="fd_fecha1">Fecha y Hora</string>
    <string name="fd_usuario">Usuario:</string>
    <string name="fd_usuario1">Usuario</string>
    <string name="fecha_dummy">2017/09/18</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Texto acción-->
    <string name="not_unidades">Se ha notificado a las unidades respectivas</string>
    <string name="texto_aceptar">ha aceptado</string>
    <string name="texto_llegar">ha llegado al sitio</string>
    <string name="texto_disponible">está disponible</string>
    <string name="busqueda">Buscar por radicado</string>

    <!-- Array Respuestas en sitio -->
    <string-array name="Respuestas_Sitio_Array">
        <item>Sin novedad en el sector</item>
        <item>PA solicita apoyo de P4</item>
        <item>SG solicita apoyo de P3</item>
        <item>PEV afectación parcial en la vía</item>
        <item>PEB afectación total en la vía</item>
        <item>RDA Reporte caída de poste o redes de energía</item>
        <item>Apoyo personal de mantenimiento de vías</item>
        <item>Apoyo Guardas de Tránsito</item>
        <item>Apoyo Policía Judicial por 980</item>
        <item>Apoyo otras entidades </item>
    </string-array>


    <!--Activities-->
    <string name="title_activity_insert_desa">Continuar evento</string>
    <string name="title_activity_desarrollo">Desarrollo de Evento</string>
    <string name="title_activity_detalle">Detalle</string>
    <string name="title_activity_actualizar">Actualizar evento</string>
    <string name="disponible">Disponible</string>


</resources>
