<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cco.cristiancarlosjohn.ccogestion.UI.Fragments.UpdateDesaFragment">

    <!-- Etiqueta IdRadicadoo-->
    <TextView
        android:id="@+id/idradicado_label_ff"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_radicado"
        android:textStyle="bold" />

    <!-- IdRadicadoo-->
    <TextView
        android:id="@+id/idradicado_input_ff"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="68dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="prueba" />

    <!-- Etiqueta IdDesaEvento-->
    <TextView
        android:id="@+id/iddesaevento_label_ff"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="130dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_desaevento"
        android:textStyle="bold" />

    <!-- IdDesaEvento-->
    <TextView
        android:id="@+id/iddesaevento_info_ff"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="267dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="prueba1" />

    <!-- Etiqueta Evento-->
    <TextView
        android:id="@+id/evento_label_ff"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/idradicado_label_ff"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_evento"
        android:textStyle="bold" />

    <!-- Evento-->
    <EditText
        android:id="@+id/evento_input_ff"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/idradicado_label_ff"
        android:layout_marginLeft="53dp"
        android:hint="@string/fd_evento1"
        android:maxLength="10"
        android:maxLines="1"
        android:minLines="1"
        android:phoneNumber="false"
        android:singleLine="true" />

    <!-- Etiqueta Sub Evento-->
    <TextView
        android:id="@+id/subEvento_label_ff"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/idradicado_label_ff"
        android:layout_marginLeft="130dp"
        android:layout_marginStart="130dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_subEvento"
        android:textStyle="bold" />

    <!-- Sub Evento-->
    <EditText
        android:id="@+id/subEvento_input_ff"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/idradicado_label_ff"
        android:layout_marginLeft="210dp"
        android:hint="@string/fd_subEvento1"
        android:maxLength="10"
        android:maxLines="1"
        android:minLines="1"
        android:phoneNumber="false"
        android:singleLine="true" />

    <!-- Observacioones -->
    <EditText
        android:id="@+id/observaciones_input_ff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/evento_label_ff"
        android:layout_centerHorizontal="true"
        android:hint="@string/fd_observaciones"
        android:maxLength="128"
        android:nestedScrollingEnabled="true"
        android:paddingBottom="30dp"
        android:paddingTop="22dp" />

    <!-- Etiqueta Estado-->
    <TextView
        android:id="@+id/estado_label_ff"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/observaciones_input_ff"
        android:paddingBottom="16dp"
        android:paddingTop="22dp"
        android:text="@string/fd_estado"
        android:textStyle="bold" />

    <!-- Estado-->
    <TextView
        android:id="@+id/estado_input_ff"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/observaciones_input_ff"
        android:layout_marginLeft="53dp"
        android:paddingBottom="16dp"
        android:paddingTop="22dp"
        android:text="@string/fd_estado1" />

    <!-- Etiqueta Fecha y Hora-->
    <TextView
        android:id="@+id/fecha_label_ff"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/estado_label_ff"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_fecha"
        android:textStyle="bold" />

    <!-- Fecha y Hora-->
    <TextView
        android:id="@+id/fecha_input_ff"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/estado_label_ff"
        android:layout_marginLeft="92dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_fecha1" />

    <!-- Etiqueta Fecha de Ingreso al Sistema-->
    <TextView
        android:id="@+id/fechaIng_label_ff"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/fecha_label_ff"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_fechaIngreso"
        android:textStyle="bold" />

    <!-- Fecha de Ingreso al Sistema-->
    <TextView
        android:id="@+id/fechaIng_input_ff"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/fecha_label_ff"
        android:layout_marginLeft="154dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_fechaIngreso1" />

    <!-- Etiqueta Usuario-->
    <TextView
        android:id="@+id/usuario_label_ff"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/fechaIng_label_ff"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_usuario"
        android:textStyle="bold" />

    <!-- Usuario-->
    <TextView
        android:id="@+id/usuario_input_ff"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/fechaIng_label_ff"
        android:layout_marginLeft="58dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_usuario1" />


</RelativeLayout>
