<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cco.cristiancarlosjohn.ccogestion.UI.Fragments.InsertDesaFragment">


    <!-- Etiqueta IdRadicadoo-->
    <TextView
        android:id="@+id/idradicado_label_fi"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_radicado"
        android:textStyle="bold" />

    <!-- IdRadicadoo-->
    <TextView
        android:id="@+id/idradicado_input_fi"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="68dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp" />



    <!-- Etiqueta Sub Evento-->
    <TextView
        android:id="@+id/subEvento_label_fi"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/idradicado_label_fi"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_subEvento"
        android:textStyle="bold" />

    <!-- Sub Evento-->
    <Spinner
        android:id="@+id/subEvento_input_fi"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/fd_subEvento1"
        android:maxLength="10"
        android:entries="@array/entradas_Cod_Eventos"
        android:layout_alignBottom="@+id/subEvento_label_fi"
        android:layout_toRightOf="@+id/subEvento_label_fi"
        android:layout_toEndOf="@+id/subEvento_label_fi"
        android:layout_below="@+id/idradicado_input_fi" />

    <!-- Observacioones -->
    <EditText
        android:id="@+id/observaciones_input_fi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subEvento_label_fi"
        android:layout_centerHorizontal="true"
        android:hint="@string/fd_observaciones"
        android:maxLength="128"
        android:nestedScrollingEnabled="true"
        android:paddingBottom="30dp"
        android:paddingTop="22dp" />

    <!-- Etiqueta Fecha y Hora-->
    <TextView
        android:id="@+id/fecha_label_fi"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/observaciones_input_fi"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fd_fecha"
        android:textStyle="bold" />

    <!-- Fecha y Hora-->
    <EditText
        android:id="@+id/fecha_input_fi"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fecha_dummy"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/idradicado_input_fi"
        android:layout_alignEnd="@+id/idradicado_input_fi" />

    <EditText
        android:id="@+id/hora_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="10:20"
        android:layout_alignBottom="@+id/fecha_input_fi"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/fecha_input_fi" />


</RelativeLayout>

